--- a/prepros.config
+++ b/prepros.config
@@ -929,6 +929,8 @@
       {
         "file": "js/main.js",
         "config": {
+          "autoCompile": true,
+          "customOutput": "js\\main-dist.js",
           "tasks": {
             "concat-js": {
               "enable": true
@@ -937,8 +939,7 @@
               "enable": true
             }
           },
-          "customOutput": "js\\main-dist.js",
-          "autoCompile": true
+          "sourceMap": true
         }
       }
     ]
